# movie-recommender

./: .gitignore  README.md  docker-compose.yaml
components/backend/: Dockerfile  pyproject.toml
components/backend/src/: app.py  config.py  utils.py
components/backend/src/model/: model.py  retriever.py  semantic_layer.py
components/backend/src/prompts/: chatbot_recommender.yaml
components/frontend/: Dockerfile  pyproject.toml
components/frontend/.streamlit/: config.toml
components/frontend/src/: app.py  utils.py
